--- a/cyoa/main/default.tmpl
+++ b/cyoa/main/default.tmpl
@@ -7,26 +7,27 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<style>
-		h1 {
-			text-align: center;
-		}
-	</style>
 </head>
 
-<body>
+<body style="background:rgba(240,240,218)">
 	<div class="container-fluid">
-		<h1 class="display-4">{{.Title}}</h1>
-		{{range .Paragraphs}}
-		<p class="text-justify">{{.}}</p>
-		{{end}}
-		<ul class="nav flex-column">
-			{{range .Options}}
-			<li class="nav-item">
-				<a class="nav-link" href="/{{.Chapter}}">{{.Text}}</a>
-			</li>
-			{{end}}
-		</ul>
+		<div class="row justify-content-center">
+			<h1 class="display-4" style="background:rgba(194,221,252)">{{.Title}}</h1>
+		</div>
+		<div class="row justify-content-center">
+			<div class="col-6" style="background:rgba(252,239,194)">
+				{{range .Paragraphs}}
+				<p class="text-justify">{{.}}</p>
+				{{end}}
+				<ul class="nav flex-column">
+					{{range .Options}}
+					<li class="nav-item">
+						<a class="nav-link" href="/{{.Chapter}}">{{.Text}}</a>
+					</li>
+					{{end}}
+				</ul>
+			</div>
+		</div>
 	</div>
 </body>
 
